Added css, images etc for NCATS branding Updated templates to include branding ribbons, footer Adjusted menus (could look better though)

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -10,7 +10,7 @@
             <div class="col-md-12">
 
                 <div class="page-header">
-                    <h1>About the Scaffold Trend Explorer (v@app.APP_VERSION)</h1>
+                    <h1>About (v@app.APP_VERSION)</h1>
                 </div>
 
 
