--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,10 +1,51 @@
 @(app: controllers.Application, title: String)(menu: Html)(content: Html)
 
 <!DOCTYPE html>
-
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
+
+            <!--[if lte IE 9]>
+        <style type="text/css">
+        #ie6msg {
+            border: 3px solid #c33;
+            margin: 8px 0;
+            background: #fcc;
+            color: #000;
+        }
+
+        #ie6msg h4 {
+            margin: 8px;
+            padding: 0;
+        }
+
+        #ie6msg p {
+            margin: 8px;
+            padding: 0;
+        }
+
+        #ie6msg p a.getie7 {
+            font-weight: bold;
+            color: #006;
+        }
+
+        #ie6msg p a.ie6expl {
+            font-weight: bold;
+            color: #006;
+        }
+        </style>
+
+        <div id="ie6msg">
+            <h4>Did you know that your browser is out of date?</h4>
+            <p>To get the best possible experience using this website it is recommended that you upgrade your browser to a newer version.
+        <p>You could also try some other popular browsers like <a class="ie6expl" href="http://mozilla.com">FireFox</a>
+            or
+            <a class="ie6expl" href="https://www.google.com/chrome/S">Chrome</a>.</p>
+        </div>
+        <![endif]-->
+
         <title>@title</title>
+        <link rel="icon" type="img/ico" href='@routes.Assets.versioned("ginas/images/ncats_favicon.ico")'>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
@@ -14,18 +55,61 @@
         <script src='@routes.Assets.versioned("lib/jquery/jquery.min.js")' type="text/javascript"></script>
         <script src='@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")' type="text/javascript"></script>
 
-
             <!-- Don't use local version since it doesn't respect per series color spec -->
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="http://code.highcharts.com/highcharts-more.js"></script>
         <script src="https://code.highcharts.com/stock/indicators/indicators.js"></script>
 
+        <link rel="stylesheet" href='@routes.Assets.versioned("ginas/css/ginas.css")'>
+            <link rel="stylesheet" href='@routes.Assets.versioned("ginas/css/drugs.css")'>
+
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112438441-1"></script>
+        <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
+                gtag('js', new Date());
+                gtag('config', 'UA-112438441-1');
+        </script>
+
+
     </head>
     <body>
-        @menu
+        <div id="ncatsRibbon">
+            <div class="container no-gutter">
+                <img src="@routes.Assets.versioned("images/nihribbon-hhs.svg")" alt="HHS Logo" class="ncats-ribbon hhs-logo">
+
+                <a href="http://www.hhs.gov/"
+                title="U.S. Department of Health & Human Services | Homepage"
+                class="ext"
+                target="_blank">U.S. Department of Health &amp; Human Services</a>
+
+                <img src="@routes.Assets.versioned("images/nihribbon-divider.svg")" class="nihDivider ncats-ribbon" alt="Divider Arrow">
+                <img src="@routes.Assets.versioned("images/nih-ribbon.svg")" class="nihArrows ncats-ribbon nih-logo" alt="NIH Logo">
+
+                <a href="http://www.nih.gov/"
+                title="National Institutes of Health | Homepage"
+                class="ext"
+                target="_blank">National Institutes of Health</a>
+
+                <img src="@routes.Assets.versioned("images/nihribbon-divider.svg")" class="nihDivider ncats-ribbon" alt="Divider Arrow">
+                <img src="@routes.Assets.versioned("images/nih-ribbon.svg")" class="nihArrows ncats-ribbon nih-logo" alt="NIH Logo">
+
+                <a href="http://www.ncats.nih.gov"
+                title="National Center for Advancing Translational Sciences | Homepage"
+                target="new">NCATS</a>
+            </div>
+        </div>
+
+        <div class="row-fluid" id="main-menu">@menu</div>
+
         <div class="content">
             @content
-                <!-- @footer() -->
         </div>
+
+        @footer()
+
     </body>
 </html>
