--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -36,7 +36,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Bookmarked Scaffolds<span class="caret"></span></a>
+                        <i class="fa fa-bookmark fa-2x" aria-hidden="true"></i> </a>
                     <ul class="dropdown-menu">
                     @defining(configuration.get[Seq[Configuration]]("bookmarks.entries").sortBy(_.get[String]("name"))) { configs =>
                         @configs.map { config =>
@@ -45,7 +45,7 @@
                     }
                     </ul>
                 </li>
-                <li><a href="@controllers.routes.Application.about()">About</a></li>
+                <li><a href="@controllers.routes.Application.about()"> <i class="fa fa-info-circle fa-2x" aria-hidden="true"></i> </a></li>
                 <!--
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
