--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -44,7 +44,7 @@
         <![endif]-->
 
         <title>@title</title>
-        <link rel="icon" type="img/ico" href='@routes.Assets.versioned("ginas/images/ncats_favicon.ico")'>
+        <link rel="shortcut icon" type="image/x-icon" href='@routes.Assets.versioned("ginas/images/ncats_favicon.ico")'>
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
