--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -47,7 +47,7 @@
                 <p>If you find this application useful, consider citing
             <blockquote class="blockquote">
                 Zdrazil, B. and Guha, R., <i>J. Med. Chem.</i>, <b>2007</b>, ASAP. DOI:
-                <a href="10.1021/acs.jmedchem.7b00954">10.1021/acs.jmedchem.7b00954</a>
+                <a href="http://dx.doi.org/10.1021/acs.jmedchem.7b00954">10.1021/acs.jmedchem.7b00954</a>
             </blockquote>
 
                 <p class="lead">Frequently Asked Questions</p>
