--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,33 +1,38 @@
 @(app: controllers.Application, form: Form[TrendForm.Data], postUrl: Call)(implicit request: MessagesRequestHeader, configuration: play.api.Configuration)
 
-@main(app, "Scaffold Trend Explorer") {
-    @menu("compounds", configuration)
-} {
+    @main(app, "Scaffold Trend Explorer") {
+        @menu("compounds", configuration)
+    } {
 
-    <div class="container vertical-center" id="main-box">
-        <div class="row">
-            <div class="col-1">
-                The Scaffold Trend Explorer helps you look at property trends for a scaffold over time. Currently a
-                small set of properties are considered, but will be expanded over time. See
-                <a href="@controllers.routes.Application.about()">here</a> for a description of the
-                properties available. You can visually compare trends for multiple (upto 9) scaffolds simultaneously and download the trend data
-                for individual scaffolds or all of them at one go. Note that for small scaffolds, query times can be long.
+        <div class="container vertical-center" id="main-box" >
+            <div class="row">
+                <div class="col-1">
+                    <p>The Scaffold Trend Explorer helps you look at property trends for a scaffold (or more generally,
+                        any substructure) over time. Currently a
+                        small set of properties are considered. See <a href="@controllers.routes.Application.about()">here</a>
+                        for a description of the properties available. You can visually compare trends for multiple
+                        (upto 9) scaffolds simultaneously and download the trend data for individual scaffolds or all of
+                        them at one go. Use the bookmarks to quickly access the SMILES for well known scaffolds.
+                    </p>
+                    <p>Note that for small scaffolds, query times can be long, and as a result, we don't allow searches
+                        to be run using benzene or straight chain alkanes (7 or fewer carbons) as queries.
+                    </p>
+                </div>
             </div>
+
+            <div class="row">
+            @tform(form, postUrl, "compounds", false)
+            </div>
+
+            <div class="row">
+                <div class="col-lg-8" id="plotDiv">
+
+                </div>
+                <div class="col-lg-4" id="controlDiv">
+
+                </div>
+            </div>
+
         </div>
 
-        <div class="row">
-        @tform(form, postUrl, "compounds", false)
-        </div>
-
-        <div class="row">
-            <div class="col-lg-8" id="plotDiv">
-
-            </div>
-            <div class="col-lg-4" id="controlDiv">
-
-            </div>
-        </div>
-
-    </div>
-
-}
+    }
