updated exclude list info

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -15,7 +15,7 @@
                         them at one go. Use the bookmarks to quickly access the SMILES for well known scaffolds.
                     </p>
                     <p>Note that for small scaffolds, query times can be long, and as a result, we don't allow searches
-                        to be run using benzene or straight chain alkanes (7 or fewer carbons) as queries.
+                        to be run for small rings (benzene and pyrrole) or straight chain alkanes (7 or fewer carbons) as queries.
                     </p>
                 </div>
             </div>
